--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -64,7 +64,7 @@
                 Label="Tous"
                 Image="monochrome_tray_2_fill.svg"
                 Count="42"
-                ActionCommand="{Binding GoToNavigationCommand}"
+                ActionCommand="{Binding nav.GoToNavigationCommand}"
                 ActionCommandParameter="{pages:ListPage}"
              />
 
@@ -73,7 +73,7 @@
             <controls:ButtonView
                 Label="En prêt"
                 Image="monochrome_person_badge_clock_fill.svg"
-                ActionCommand="{Binding GoToNavigationCommand}"
+                ActionCommand="{Binding nav.GoToNavigationCommand}"
                 ActionCommandParameter="{pages:LoanPage}"
              />
 
@@ -119,7 +119,7 @@
             <controls:ButtonView
                 Label="Auteur"
                 Image="monochrome_person_fill.svg"
-                ActionCommand="{Binding GoToNavigationCommand}"
+                ActionCommand="{Binding nav.GoToNavigationCommand}"
                 ActionCommandParameter="{pages:AuthorPage}"
              />
 
@@ -128,7 +128,7 @@
             <controls:ButtonView
                 Label="Date de publication"
                 Image="calendar.svg"
-                ActionCommand="{Binding GoToNavigationCommand}"
+                ActionCommand="{Binding nav.GoToNavigationCommand}"
                 ActionCommandParameter="{pages:DatePage}"
              />
 
@@ -137,7 +137,7 @@
             <controls:ButtonView
                 Label="Note"
                 Image="monochrome_sparkles.svg"
-                ActionCommand="{Binding GoToNavigationCommand}"
+                ActionCommand="{Binding nav.GoToNavigationCommand}"
                 ActionCommandParameter="{pages:NotePage}"
              />
             
