--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -65,7 +65,7 @@
                 Image="monochrome_tray_2_fill.svg"
                 Count="42"
                 ActionCommand="{Binding nav.GoToNavigationCommand}"
-                ActionCommandParameter="{pages:ListPage}"
+                ActionCommandParameter="ListPageTous"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
