add AuthorVM + change some command from ListPageVM

--- a/src/PocketLib/Pages/DetailsPage.xaml
+++ b/src/PocketLib/Pages/DetailsPage.xaml
@@ -20,7 +20,11 @@
 
             <BoxView HeightRequest="0.5" Color="LightGray"/>
 
-            <controls:DetailsView></controls:DetailsView>
+            <controls:DetailsView
+                
+                
+                
+                ></controls:DetailsView>
             
         </StackLayout>
     </ScrollView>
