--- a/src/PocketLib/Pages/MainPage.xaml
+++ b/src/PocketLib/Pages/MainPage.xaml
@@ -73,8 +73,8 @@
             <controls:ButtonView
                 Label="En prêt"
                 Image="monochrome_person_badge_clock_fill.svg"
-                ActionCommand="{Binding Nav.GoToNavigationCommand}"
-                ActionCommandParameter="{pages:LoanPage}"
+                ActionCommand="{Binding MainPageVM.GoToAndLoadCommand}"
+                ActionCommandParameter="LoanPage"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -119,8 +119,6 @@
             <controls:ButtonView
                 Label="Auteur"
                 Image="monochrome_person_fill.svg"
-                ActionCommand="{Binding Nav.GoToNavigationCommand}"
-                ActionCommandParameter="{pages:AuthorPage}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -128,8 +126,6 @@
             <controls:ButtonView
                 Label="Date de publication"
                 Image="calendar.svg"
-                ActionCommand="{Binding Nav.GoToNavigationCommand}"
-                ActionCommandParameter="{pages:DatePage}"
              />
 
             <BoxView HeightRequest="0.5" Color="LightGray" Margin="20,0,0,0"/>
@@ -137,8 +133,6 @@
             <controls:ButtonView
                 Label="Note"
                 Image="monochrome_sparkles.svg"
-                ActionCommand="{Binding Nav.GoToNavigationCommand}"
-                ActionCommandParameter="{pages:NotePage}"
              />
             
             <BoxView HeightRequest="0.5" Color="LightGray"/>
