--- a/src/PocketLib/Pages/Views/TitleAndDescView.xaml
+++ b/src/PocketLib/Pages/Views/TitleAndDescView.xaml
@@ -26,6 +26,7 @@
 
             <Label
                 FontSize="Small"
+                MinimumHeightRequest="60"
                 Text="{Binding AttributeTitle1, Source={x:Reference root}}" IsVisible="{Binding AttributeTitle1, Converter={StaticResource MyStringNullOrEmptyBoolConverter}}"></Label>
             <Label
                 Grid.Row="1"
