--- a/src/PocketLib/Pages/Views/TitleAndDescView.xaml
+++ b/src/PocketLib/Pages/Views/TitleAndDescView.xaml
@@ -26,7 +26,6 @@
 
             <Label
                 FontSize="Small"
-                MinimumHeightRequest="60"
                 Text="{Binding AttributeTitle1, Source={x:Reference root}}" IsVisible="{Binding AttributeTitle1, Converter={StaticResource MyStringNullOrEmptyBoolConverter}}"></Label>
             <Label
                 Grid.Row="1"
@@ -57,6 +56,7 @@
 
         </Grid>
         <Label
+            Padding="0,5"
             FontSize="10"
             Text="{Binding Desc, Source={x:Reference root}}" IsVisible="{Binding Desc, Converter={StaticResource MyStringNullOrEmptyBoolConverter}}"></Label>
     </StackLayout>
