--- a/src/PocketLib/Pages/ListPage.xaml
+++ b/src/PocketLib/Pages/ListPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:views="clr-namespace:PocketLib.Pages.Views"
              xmlns:pages="clr-namespace:PocketLib.Pages"
              x:Class="PocketLib.Pages.ListPage"
@@ -16,23 +17,48 @@
             >
         </views:HeaderView>
     </Shell.TitleView>
-
-    <CollectionView ItemsSource="{Binding ListPageVM.Mgr.Books}" 
-                    SelectionMode="Single" SelectionChangedCommand=""
-                    >
-        <CollectionView.ItemTemplate>
-            <DataTemplate>
-                <views:PreviewView
-                Image="{Binding ImageSmall}"
-                Title="{Binding Title}"
-                Author="{Binding Author.Name}"
-                Status="{Binding Status}"
-                />
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
-</ContentPage>
-<!--
-ActionCommand="{Binding ListPageVM.GoToAndLoadCommand, Source={x:Reference Root}}"
-    -->
     
+    <Grid RowDefinitions="Auto" RowSpacing="500">
+        <CollectionView ItemsSource="{Binding ListPageVM.Mgr.Books}" 
+                SelectionMode="Single" SelectionChanged="SelectableItemsView_OnSelectionChanged"
+                >
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                        <views:PreviewView
+                            Image="{Binding ImageSmall}"
+                            Title="{Binding Title}"
+                            Author="{Binding Author.Name}"
+                            Status="{Binding Status}"
+                            />
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <ImageButton Grid.Column="1" Source="monochrome_chevron_left.svg" HorizontalOptions="Center">
+                <ImageButton.Behaviors>
+                    <toolkit:IconTintColorBehavior TintColor="Red" />
+                </ImageButton.Behaviors>
+            </ImageButton>
+            <Label Grid.Column="2" Text="1" HorizontalOptions="Center" VerticalOptions="Center" FontSize="16"></Label>
+            <Label Grid.Column="3" Text="/" HorizontalOptions="Center" VerticalOptions="Center" FontSize="16"></Label>
+            <Label Grid.Column="4" Text="2" HorizontalOptions="Center" VerticalOptions="Center" FontSize="16"></Label>
+            <ImageButton Grid.Column="5" Source="monochrome_chevron_right.svg" HorizontalOptions="Center">
+                <ImageButton.Behaviors>
+                    <toolkit:IconTintColorBehavior TintColor="Red" />
+                </ImageButton.Behaviors>
+            </ImageButton>
+        </Grid>
+
+    </Grid>
+</ContentPage>
+
